# hyprland-minimizer

./: Cargo.toml  LICENSE  README.md
src/: main.rs
