# This file defines the project metadata and dependencies.
# Place this in the root directory of your new Rust project.

[package]
name = "hyprland-minimizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# zbus is a modern, async D-Bus library
zbus = "3"

# tokio is the asynchronous runtime
tokio = { version = "1", features = ["full"] }

# For parsing JSON output from hyprctl
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For handling errors gracefully
anyhow = "1.0"
